views: impose minimum width on non-Harmony snappables

Some dialogs, like the permission bubble, have very narrow
preferred contents view widths, but titles that require wider
dialogs. Instead of these dialogs individually imposing
minimum widths, require all snappable non-Harmony dialogs to
have a minimum width.

BUG=726184

Review-Url: https://codereview.chromium.org/2907873002
Cr-Commit-Position: refs/heads/master@{#475900}

Former-commit-id: 436d5e22db0b978fc69612f62f8a9432622d8fe1